<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BingoEtage</string>
    <string name="default_layout" translatable="false">18</string>

    <string name="first_tab_name">Grid</string>
    <string name="second_tab_name">Calendar</string>
    <string name="third_tab_name">Statistics</string>
    <string name="unknown_tab">Unknown tab</string>
    <string name="calendar_toast_text">Selecting current day</string>
    <string name="setting_text">Parameters</string>
    <string name="text_bingo_count">Total: %1$s</string>
    <string name="text_button_1">1</string>
    <string name="text_button_2">2</string>
    <string name="text_button_3">3</string>
    <string name="text_button_4">4</string>
    <string name="text_button_5">5</string>
    <string name="text_button_6">6</string>
    <string name="text_button_7">7</string>
    <string name="text_button_8">8</string>
    <string name="text_button_9">9</string>
    <string name="text_button_10">10</string>
    <string name="text_ok_button">Validate</string>
    <string name="description_edit_button">Edit</string>
    <string name="calendar_header_date">%1$s %2$s</string>
    <string name="calendar_header_average">Average: %.2f</string>
    <string name="theme_title">Theme choice</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Day theme</string>
    <string name="theme_dark">Night theme</string>
    <string name="username_text">Your name</string>
    <string name="main_toolbar_title">Floor bingo</string>
    <string name="settings_toolbar_title">Parameters</string>
    <string name="username_empty_reply">Please change the username in the parameters to generate personalized grids</string>
    <string name="update_category_title">Update</string>
    <string name="update_now_text">Update now</string>
    <string name="update_frequency_title">Update frequency</string>

    <string name="CSV_IO_category_title">Database export/import</string>
    <string name="CSV_IO_export_text">Export the database to CSV format</string>
    <string name="CSV_IO_import_text">Import the database from CSV format</string>

    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="never">Never</string>
    <string name="date_format">%1\$tm/%1\$td/%1\$tY</string>
    <string name="calendar_button_text">Go to current date</string>
    <string name="trigram_day_1">MON</string>
    <string name="trigram_day_2">TUE</string>
    <string name="trigram_day_3">WED</string>
    <string name="trigram_day_4">THU</string>
    <string name="trigram_day_5">FRI</string>
    <string name="trigram_day_6">SAT</string>
    <string name="trigram_day_7">SUN</string>
    <string name="delete_DB_object_yes_button_text">Yes</string>
    <string name="delete_DB_object_no_button_text">No</string>
    <string name="delete_DB_object_title">Deletion</string>
    <string name="delete_DB_object_message">Do you want to delete this database entry?</string>
    <string name="average_month_tab_title">Average per month</string>
    <string name="floor_pie_chart_tab_title">Floors</string>
    <string name="average_day_tab_title">Average per day</string>
    <string name="spinner_text_year">Year:</string>
    <string name="spinner_text_type">Type:</string>
    <string name="average_month_graph_title">Average per month</string>
    <string name="floor_pie_chart_title">Floor repartition</string>
    <string name="average_day_graph_title">Average per day</string>
    <string name="year_spinner_all_option">All</string>
    <string name="floor_layout_title">Floor</string>
    <string name="floor_21">21</string>
    <string name="floor_18">18</string>
    <string name="floor_17">17</string>
    <string name="spinner_type_option_1">Bingo</string>
    <string name="spinner_type_option_2">Stops</string>
    <string name="version_dialog_title">New update available</string>
    <string name="version_dialog_version_label">Version: %1$s</string>
    <string name="version_dialog_download_size_label">Download size: %1$s</string>
    <string name="version_dialog_patch_note_label">Patch notes: </string>
    <string name="version_dialog_positive_button">Install</string>
    <string name="version_dialog_negative_button">Cancel</string>
    <string name="toast_update_check_failed">Error during update check</string>
    <string name="toast_update_uptodate">The application is up-to-date</string>
    <string name="csv_file_header">\"Day\"; \"Month\"; \"Year\"; \"List of shuffled inputs\"; \"Checked state\"; \"Editing boolean\"; \"Result\"; \"Layout\"</string>
    <string name="csv_export_complete_toast_text">CSV export complete</string>
    <string name="csv_export_error_toast_text">Error during CSV export</string>
    <string name="csv_export_file_format">FloorBingo__%1\$tY_%1\$tm_%1\$td.csv</string>

    <string name="csv_import_complete_toast_text">CSV import complete</string>
    <string name="csv_import_error_toast_text">Error during CSV import</string>
    <string name="csv_import_alert_dialog_title">Warning</string>
    <string name="csv_import_alert_dialog_message">This action will delete the current database and its replacement by the data contained in the selected file.\nDo you want to proceed?</string>
    <string name="csv_import_alert_dialog_pos_button">Yes</string>
    <string name="csv_import_alert_dialog_neg_button">No</string>
    <string name="csv_import_preference_toggle_name" translatable="false">CSV_import_toggle</string>

    <string name="first_opening_dialog_title_text_view_text">First configuration </string>
    <string name="first_opening_dialog_layout_text_view_text">Floor: </string>
    <string name="first_opening_dialog_layout_explanation_text_view_text">The grids will be generated from the selected floor number.</string>
    <string name="first_opening_dialog_username_text_view_text">Your name: </string>
    <string name="first_opening_dialog_username_edit_text_hint_text">User name</string>
    <string name="first_opening_dialog_username_explanation_text_view_text">The username is used when generating random grids.\nAs such, if the users had registered different usernames, the generated grids will be different.\nThe username can have no special meaning as long as it is different from the ones of the users you compare to.</string>
    <string name="first_opening_dialog_yes_button_text">Confirm</string>
    <string name="first_opening_dialog_cancel_button_text">Later</string>

</resources>