<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/firstOpeningTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/first_opening_dialog_title_text_view_text"
        android:background="?attr/colorPrimary"
        android:textColor="?attr/stat_tab_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_marginBottom="40dp" />

    <TextView
        android:id="@+id/layoutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textColor="?attr/stat_tab_text_color"
        android:text="@string/first_opening_dialog_layout_text_view_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstOpeningTitleTextView"
        app:layout_constraintBottom_toTopOf="@id/layoutExplanationTextView"/>

    <Spinner
        android:id="@+id/layoutSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textColor="?attr/stat_tab_text_color"
        android:entries="@array/floor_layout_entries"
        app:layout_constraintBottom_toBottomOf="@id/layoutTextView"
        app:layout_constraintStart_toEndOf="@id/layoutTextView"
        app:layout_constraintTop_toTopOf="@id/layoutTextView" />

    <TextView
        android:id="@+id/layoutExplanationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="14sp"
        android:text="@string/first_opening_dialog_layout_explanation_text_view_text"
        android:padding="4dp"
        android:background="@drawable/patchnote_text_view_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTextView"
        app:layout_constraintBottom_toTopOf="@id/sepView"/>

    <View
        android:id="@+id/sepView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/layoutExplanationTextView"
        app:layout_constraintBottom_toTopOf="@id/usernameTextView"/>

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textColor="?attr/stat_tab_text_color"
        android:text="@string/first_opening_dialog_username_text_view_text"
        app:layout_constraintTop_toBottomOf="@+id/sepView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/usernameExplanationTextView" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textColor="?attr/stat_tab_text_color"
        android:hint="@string/first_opening_dialog_username_edit_text_hint_text"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/usernameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/usernameTextView"
        app:layout_constraintTop_toTopOf="@+id/usernameTextView"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/usernameExplanationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="14sp"
        android:text="@string/first_opening_dialog_username_explanation_text_view_text"
        android:padding="4dp"
        android:background="@drawable/patchnote_text_view_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameExplanationTextView">

        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/first_opening_dialog_yes_button_text"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancelButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/first_opening_dialog_cancel_button_text"
            app:layout_constraintStart_toEndOf="@id/yesButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>