<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/version_dialog_title"
        android:background="?attr/colorPrimary"
        android:textColor="?attr/stat_tab_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="8dp" />

    <TextView
        android:id="@+id/versionNumberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/version_dialog_version_label"
        android:textColor="?attr/stat_tab_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:textSize="16sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/downloadSizeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/version_dialog_download_size_label"
        android:textColor="?attr/stat_tab_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/versionNumberTextView"
        android:textSize="16sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/patchNoteLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/version_dialog_patch_note_label"
        android:textColor="?attr/stat_tab_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadSizeTextView"
        android:textSize="16sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/patchNoteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:text=""
        android:textSize="12sp"
        android:scrollbars = "vertical"
        android:maxLines="10"
        android:background="@drawable/patchnote_text_view_background"
        android:textColor="?attr/stat_tab_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/patchNoteLabelTextView"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>